# frameflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
frameflow/polars/: __init__.py  ops.py  pipeline.py
frameflow/pyspark/: __init__.py  ops.py  pipeline.py
