[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "frameflow"
version = "1.0.0"
description = "Unified data transformation framework for Polars and PySpark"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stephen Chen", email = "your.email@example.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
polars = ["polars>=0.19.0"]
pyspark = ["pyspark>=3.3.0"]
gcs = ["fsspec>=2023.1.0", "gcsfs>=2023.1.0"]
all = ["polars>=0.19.0", "pyspark>=3.3.0", "fsspec>=2023.1.0", "gcsfs>=2023.1.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/schen18/frameflow"
Documentation = "https://github.com/schen18/frameflow"
Repository = "https://github.com/schen18/frameflow"